--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,19 @@
 language: python
 python:
   - "2.7"
-  - pypy
+  - "3.3"
+  - "3.4"
+  - "pypy"
 # command to install dependencies, 
 install:
-    - pip install -vr requirements.txt||true
+    - pip install -vr requirements.txt
 # command to run tests, e.g. python setup.py test
 script:
   - echo $TRAVIS_PYTHON_VERSION
   - cd .. && supybot-test Bible
 notifications:
     email: false
-    irc:
-      channels:
-        - "irc.efnet.net#supybot"
+    irc: "irc.efnet.net#supybot"
 matrix:
     fast_finish: true
 
